added nonack mode; cleaned unused code in UdpAsyncServer, added stub for message handling; QSupported is now handled correctly, reporting packet length (defaults to 256) and requesting non-ack mode to be enabled.

--- a/gdbrsp/Makefile
+++ b/gdbrsp/Makefile
@@ -17,6 +17,7 @@ TARGET_DEPS := \
 
 all: $(OUTPUTDIR)/$(LIBNAME)
 	$(Q)g++ $(OUTPUTDIR)/*.o -o $(OUTPUTDIR)/a.out
+	./$(OUTPUTDIR)/a.out
 
 #compress all generated object files into a pack
 $(OUTPUTDIR)/$(LIBNAME): $(TARGET_DEPS)
