--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ursa"]
-path = simulator
-url = https://github.com/andersondomingues/ursa
+[submodule "simulator"]
+	path = simulator
+	url = https://github.com/andersondomingues/ursa
