fixed coloring in Makefile; added superclass to model processors; renamed THellfireProcessor to THFRiscV; updated orca-mpsoc platform to reflect changes from this commit; added struct to model processor state (unfinished); moved logs from /bin to the root folder (executable must run from root dir now)

--- a/gdbrsp/Makefile
+++ b/gdbrsp/Makefile
@@ -21,9 +21,9 @@ $(OUTPUTDIR)/$(LIBNAME): $(TARGET_DEPS)
 
 #compile all classes (.cpp) into %.o files
 $(OUTPUTDIR)/%.o: $(SOURCEDIR)/%.cpp  $(HEADERDIR)/%.h 
-	$(Q)$(CPP) $(CPPFLAGS) $< -o $@ 
+	$(Q)g++ $(CPPFLAGS) $< -o $@ 
 
 #remove any preoviosly generated file
 clean:
-	$(Q)rm -rf bin/*.a 	rm -rf bin/*.o
+	$(Q)rm -rf bin/*.a rm -rf bin/*.o
 
