integrated gdbrsp into the platform. feature can be activated in Configuration.mk. some protocol-specific message handling is missing yet

--- a/gdbrsp/Makefile
+++ b/gdbrsp/Makefile
@@ -2,7 +2,7 @@
 SOURCEDIR :=./src
 HEADERDIR :=./include
 OUTPUTDIR :=./bin
-LIBNAME :=librsv.a
+LIBNAME :=libgdbrsp.a
 
 LIBSIM_PATH:=../simulator
 LIBSIM:=$(LIBSIM_PATH)/bin/libsim.a
