fixed missing compiling directive that prevented models from compiling without gdbrsp support

--- a/models/Makefile
+++ b/models/Makefile
@@ -1,4 +1,8 @@
+#includes local configuration
 include Configuration.mk
+
+#include global config (required by gdbrsp support)
+include ../Configuration.mk
 
 #directory configuration
 SOURCEDIR :=src
