reworked single-core example: simplified file hierarchy, added hardware counters reporting, reworked simulation status to reflect software termination via exit trap

--- a/platforms/single-core/Makefile
+++ b/platforms/single-core/Makefile
@@ -41,9 +41,7 @@ else
 endif
 
 #source files for the platform
-TARGET_DEPS := \
-	$(SOURCEDIR)/ProcessingTile.cpp \
-	$(SOURCEDIR)/Orca.cpp
+TARGET_DEPS := $(SOURCEDIR)/Orca.cpp
 
 DEP_LIBS := $(LIBRSP) $(LIBMOD) $(LIBSIM)
 
