wip: fixed linting for some files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
     "editor.detectIndentation": false,
     "cpplint.cpplintPath": "/home/adomingues/.local/bin/cpplint",
     "files.associations": {
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "ostream": "cpp"
     }
 }
