wip: linted some files

--- a/gdbrsp/Makefile
+++ b/gdbrsp/Makefile
@@ -19,14 +19,15 @@ CPPFLAGS :=-Iinclude -I$(LIBSIM_PATH)/include -I$(LIBMOD_PATH)/include -c $(MAIN
 #list of dependencies (source files)
 TARGET_DEPS := \
 	$(OUTPUTDIR)/UdpAsyncServer.o \
-	$(OUTPUTDIR)/RspServer.o
+	$(OUTPUTDIR)/RspServer.o \
+	$(OUTPUTDIR)/DataConvertionHelper.o 
 
 #compress all generated object files into a pack
 $(OUTPUTDIR)/$(LIBNAME): $(TARGET_DEPS)
 	$(Q)ar rcs $(OUTPUTDIR)/$(LIBNAME) $(TARGET_DEPS)
 
 #compile all classes (.cpp) into %.o files
-$(OUTPUTDIR)/%.o: $(SOURCEDIR)/%.cpp  $(HEADERDIR)/%.h 
+$(OUTPUTDIR)/%.o: $(SOURCEDIR)/%.cpp  $(HEADERDIR)/%.hpp 
 	$(Q)g++ $(CPPFLAGS) $< -o $@ 
 
 #remove any preoviosly generated file
