renamed ursa package to orcasim::base

--- a/orcasim-base/Makefile
+++ b/orcasim-base/Makefile
@@ -1,17 +1,9 @@
-#include local config
-include Configuration.mk
-
-#dir config
 SOURCEDIR :=src
 HEADERDIR :=include
 OUTPUTDIR :=bin
 
-#libname
-LIBNAME := libursa.a 
-URSAOPT := -O3 -march=native -mtune=native
-
-
-CXXFLAGS := -I$(HEADERDIR) -c $(MAIN_COMPLINE) $(URSA_COMPLINE) $(URSAOPT)
+# Name of the package
+LIBNAME := liborca-base.a 
 
 TARGET_DEPS := \
 	$(OUTPUTDIR)/Event.o \
@@ -20,14 +12,23 @@ TARGET_DEPS := \
 	$(OUTPUTDIR)/UntimedModel.o \
 	$(OUTPUTDIR)/Engine.o 
 
+# Add optimization and include flags to the compilation. Compilation 
+# optimizations favor performance over code size.
+CXXFLAGS := \
+	-O3 -march=native -mtune=native \
+	-I$(HEADERDIR)
+
 #pack file into a static library to be used later
 $(OUTPUTDIR)/$(LIBNAME): $(TARGET_DEPS)
 	$(Q)ar rcs $(OUTPUTDIR)/$(LIBNAME) $(TARGET_DEPS)
 
 #compile all classes into %.o files
 $(OUTPUTDIR)/%.o: $(SOURCEDIR)/%.cpp $(HEADERDIR)/%.hpp 
-	$(Q)g++ $(CXXFLAGS) $< -o $@ 
-	
-#remove previously generated files
+	$(Q)g++ $(CXXFLAGS) $< -o $@ -c
+
+# Remove generated object files and library
 clean:
 	$(Q)rm -rf $(OUTPUTDIR)/*.o $(OUTPUTDIR)/*.a
+
+
+
