fixed compilation errors, linking still missgin

--- a/models/hfriscv-core/Makefile
+++ b/models/hfriscv-core/Makefile
@@ -3,7 +3,7 @@ HEADERDIR :=include
 OUTPUTDIR :=bin
 
 # Name of the package
-LIBNAME := hfriscv-core.a 
+LIBNAME := libhfriscv-core.a 
 
 # Dependencies
 DEPS_INCLUDE := \
