--- a/platforms/single-core-ext/Makefile
+++ b/platforms/single-core-ext/Makefile
@@ -8,11 +8,15 @@ OUTPUTDIR :=bin
 SOURCEDIR :=src
 HEADERDIR :=include
 
+#-Wl,--start-group 
 LINKING := \
 	-lorcasim-base \
 	-lorcasim-modeling \
 	-lorcasim-gdbrsp \
-	-lpthread
+	-lhfriscv-core \
+	-lorca-network-interface \
+	-lorca-virtual-ethernet \
+	-lpthread 
 
 INCLUDES := \
 	-I../../orcasim-base/include \
@@ -26,8 +30,8 @@ INCLUDES := \
 #Flags to be used during compilation of the platform. Note 
 #that they may be different form flags used for compiling
 #dependencies.
-CXX_FLAGS += $(INCLUDES) -O3 -march=native -mtune=native
-LD_FLAGS += -Lbin $(LINKING) $(CONFIG_MEMORY)
+CXX_FLAGS += $(INCLUDES) -O3 -march=native -mtune=native -fmax-errors=5
+LD_FLAGS += -Lbin $(CONFIG_MEMORY) $(LINKING)
 
 # include headers in the dependecy check
 HEADER_FILES := $(wildcard $(HEADERDIR)/*.hpp) $(wildcard $(HEADERDIR)/*.h)
@@ -41,9 +45,22 @@ $(OUTPUTDIR)/$(PLATFORM_NAME).exe: $(SOURCE_FILES) $(HEADER_FILES)
 	cp ../../orcasim-base/bin/*.a ./bin
 	cp ../../orcasim-modeling/bin/*.a ./bin
 	cp ../../orcasim-gdbrsp/bin/*.a ./bin
-	$(Q)g++ $(SOURCE_FILES) -o $(OUTPUTDIR)/$(PLATFORM_NAME).exe $(LD_FLAGS) $(CXX_FLAGS)
+	make -C ../../models/orca-virtual-ethernet
+	make -C ../../models/hfriscv-core
+	make -C ../../models/orca-network-interface
+	cp ../../models/orca-virtual-ethernet/bin/*.a ./bin
+	cp ../../models/hfriscv-core/bin/*.a ./bin
+	cp ../../models/orca-network-interface/bin/*.a ./bin
+	ar crs ./bin/*.a
+	$(Q)g++ $(SOURCE_FILES) -o $(OUTPUTDIR)/$(PLATFORM_NAME).exe $(CXX_FLAGS) $(LD_FLAGS) 
 
 #remove previously generated files
 clean:
-	$(Q)rm -rf $(OUTPUTDIR)/$(PLATFORM_NAME).exe
+	$(Q)rm -rf $(OUTPUTDIR)/*.exe $(OUTPUTDIR)/*.a $(OUTPUTDIR)/*.o 
+	make -C ../../orcasim-base clean
+	make -C ../../orcasim-modeling clean
+	make -C ../../orcasim-gdbrsp clean
+	make -C ../../models/orca-virtual-ethernet clean
+	make -C ../../models/hfriscv-core clean
+	make -C ../../models/orca-network-interface clean
 
