--- a/models/orca-virtual-ethernet/Makefile
+++ b/models/orca-virtual-ethernet/Makefile
@@ -3,7 +3,7 @@ HEADERDIR :=include
 OUTPUTDIR :=bin
 
 # Name of the package
-LIBNAME := orca-virtual-ethernet.a 
+LIBNAME := liborca-virtual-ethernet.a 
 
 # Dependencies
 DEPS_INCLUDE := \
@@ -16,7 +16,7 @@ DEPS_LINKAGE := -lorcasim-base -lorcasim-modeling -lorcasim-gdbrsp
 # Add optimization and include flags to the compilation. Compilation 
 # optimizations favor performance over code size.
 CXXFLAGS := \
-	-O3 -march=native -mtune=native \
+	-O3 -march=native -mtune=native -fmax-errors=5\
 	-I$(HEADERDIR) $(DEPS_INCLUDE)
 
 TARGET_DEPS := $(OUTPUTDIR)/NetBridge.o
