--- a/models/hfriscv-core/Makefile
+++ b/models/hfriscv-core/Makefile
@@ -16,7 +16,7 @@ DEPS_LINKAGE := -lorcasim-base -lorcasim-modeling -lorcasim-gdbrsp
 # Add optimization and include flags to the compilation. Compilation 
 # optimizations favor performance over code size.
 CXXFLAGS := \
-	-O3 -march=native -mtune=native \
+	-O3 -march=native -mtune=native -fmax-errors=5 -std=c++17\
 	-I$(HEADERDIR) $(DEPS_INCLUDE)
 
 TARGET_DEPS := $(OUTPUTDIR)/HFRiscV.o
