--- a/orcasim-modeling/Makefile
+++ b/orcasim-modeling/Makefile
@@ -14,7 +14,7 @@ DEPS_LINKAGE := -lorcasim-base
 # Add optimization and include flags to the compilation. Compilation 
 # optimizations favor performance over code size.
 CXXFLAGS := \
-	-O3 -march=native -mtune=native -fmax-errors=5\
+	-O3 -march=native -mtune=native -fmax-errors=5 -std=c++17 \
 	-I$(HEADERDIR) $(DEPS_INCLUDE)
 
 TARGET_DEPS := \
