--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,5 +14,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: make (single-core-ext)
-      working-directory: cd platforms/single-core-ext
+      working-directory: platforms/single-core-ext
       run: make
